# hypr-ai-course

./: .gitignore
.clinerules/: memory.md
module1/demo/: JOURNAL.md  README.md
module1/demo/client-library/: PLAN.md
module1/demo/config-service/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
module1/demo/config-service/memory/: ABOUT.md  ARCHITECTURE.md  TECHNICAL.md
module1/demo/config-service/migrations/: 001_initial_schema.sql
module1/demo/config-service/src/: app.ts  database.ts  server.ts
module1/demo/config-service/src/controllers/: ApplicationController.ts  ConfigurationController.ts
module1/demo/config-service/src/models/: Application.ts  Configuration.ts
module1/demo/config-service/src/routes/: applications.ts  configurations.ts
module1/demo/config-service/tests/: setup.ts
module1/demo/prepared/config-service/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
module1/demo/prepared/config-service/config_service/: __init__.py  database.py  main.py  migrations.py  migrations_test.py  models.py  models_test.py  repositories.py  settings.py  settings_test.py
module1/demo/prepared/config-service/config_service/routers/: applications.py  configurations.py
module1/demo/prepared/config-service/migrations/: 001_initial_schema.sql
module1/demo/prompts/: web-api-1.md  web-api-2.md  web-api-3.md
module1/project/: INTEGRATE.md
module2/demo/: README.md
module2/demo/prepared/memory/: TECHNICAL.md
module2/project/: INSTRUCTIONS.md  INTEGRATE.md
(+4 files in other folders)
